tests/baselines/reference/parserMemberAccessorDeclaration7.errors.txt
==== tests/cases/compiler/parserMemberAccessorDeclaration7.ts (2 errors) ====
    class C {
        public public get Foo() { }
               ~~~~~~
!!! parserMemberAccessorDeclaration7.ts(2,12): error TS1028: Accessibility modifier already seen.
                          ~~~
!!! parserMemberAccessorDeclaration7.ts(2,23): error TS2126: Getters must return a value.
    }